# DripDrop

./: .env.example  .gitignore  README.md  app.json  example.py  package-lock.json  package.json  pyproject.toml  weather_service.py
api/: routes.py
app/: _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  login.tsx  options.tsx
